<resources>
    <string name="app_name">BracketApp</string>

    <string-array name="number_of_players_array">
        <item>4</item>
        <item>8</item>
        <item>16</item>
        <item>32</item>
        <item>64</item>
        <item>128</item>
    </string-array>

    <string-array name="not_supported_array">
        <item>Not</item>
        <item>Supported</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="make_bracket_view">Make a Bracket</string>
    <string name="enter_number_of_players_button_text">Enter</string>
    <string name="number_of_players_text">Number of Players:</string>
    <string name="help_view">How to Use</string>
    <string name="help_description">Welcome to bracketApp! Not only is the lack of a clever name a work in progress, but this app is definitely one too. Nonetheless, you
                                    are currently able to construct a bracket size of 16, 8, or 4 and place the names of the players at the first part of the bracket. While this
                                    may not be much, it is a great starting point for an app we hope to account for most (if not all) of your tournament organizing needs.</string>

    <string name="enter_player_names">Enter Player Names</string>
    <string name="my_page">My Brackets</string>
    <string name="enter">Enter</string>
    <string name="title_activity_login">Welcome to BracketApp</string>
    <string name="login_with_password">"Login"</string>
    <string name="sign_up">"Sign up"</string>
    <string name="email_hint">"Enter your email address"</string>
    <string name="password_hint">"Enter your password"</string>
    <string name="forgotPw">"Forgot Password</string>
    <string name="title_activity_forgot_password">Password Recovery</string>
    <string name="resetPassword">Submit</string>
    <string name="resetExplanation">After clicking submit, an email will be sent requesting you to reset your password</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="oldPassword">Enter your old password</string>
    <string name="newPassword">Enter your new password</string>
</resources>
