<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.firebase.samples.logindemo.MainActivity">

    <TextView
        android:id="@+id/login_status"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_up"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSendNewUserInfo" />


    <Button
        android:id="@+id/login_with_password"
        android:text="@string/login_with_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSendLoginInfo" />

    <Button
        android:id="@+id/login_without_password"
        android:text="Login as guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onLoginAsGuest" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPw"
        android:id="@+id/resetPasswordButton"
        android:layout_gravity="center_horizontal"
        android:onClick="onForgotPassword" />


</LinearLayout>